@@ -88,6 +88,7 @@ private:
 	wxStaticText *m_statLine_4;
 	wxStaticText *m_statLine_5;
 	wxStaticText *m_statLine_6;
+	wxStaticText *m_statLine_7;
 
 	wxStaticText *m_absHitLine;
 	wxButton *m_absHitButton;
@@ -135,6 +136,7 @@ private:
 	wxString MakeStatLine_4() const;
 	wxString MakeStatLine_5() const;
 	wxString MakeStatLine_6() const;
+	wxString MakeStatLine_7() const;
 
 	// Constructing Hits_lines
 	wxString MakeHitsLine_1() const;
